# monTasks

backend/: db.sqlite3  pyproject.toml
backend/api/: main.py
backend/api/schemas/: task_schema.py
backend/api/tests/: test_tasks.py
backend/api/v1/endpoints/: tasks.py
backend/config/: asgi.py  settings.py
backend/tasks/: admin.py  models.py
backend/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py
frontend/: package-lock.json
frontend/src/app/: app.html  app.ts
frontend/src/app/components/task-list/: task-list.html  task-list.ts
frontend/src/app/services/: task.ts
