[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref>=3.11.0",
    "django>=5.2.8",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
]
